marquez-k8s.yaml
---
# Source: marquez/templates/marquez/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marquez
  labels:
    app.kubernetes.io/name: marquez
    helm.sh/chart: marquez-0.51.1
    app.kubernetes.io/instance: marquez
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: marquez
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http

  selector:
    app.kubernetes.io/name: marquez
    app.kubernetes.io/instance: marquez
    app.kubernetes.io/component: marquez
---
# Source: marquez/templates/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marquez-web
  labels:
    app.kubernetes.io/name: marquez
    helm.sh/chart: marquez-0.51.1
    app.kubernetes.io/instance: marquez
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: web
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http

  selector:
    app.kubernetes.io/name: marquez
    app.kubernetes.io/instance: marquez
    app.kubernetes.io/component: web
---
# Source: marquez/templates/marquez/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marquez
  labels:
    app.kubernetes.io/name: marquez
    helm.sh/chart: marquez-0.51.1
    app.kubernetes.io/instance: marquez
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: marquez
  annotations:
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: marquez
      app.kubernetes.io/instance: marquez
      app.kubernetes.io/component: marquez
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: marquez
        helm.sh/chart: marquez-0.51.1
        app.kubernetes.io/instance: marquez
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: marquez
    spec:
      serviceAccountName: default
      containers:
        - name: marquez
          image: docker.io/marquezproject/marquez:0.51.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: marquez-volume
              mountPath: /usr/src/app/config.yml
              subPath: config.yml
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
            - name: http-admin
              containerPort: 5001
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http-admin
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http-admin
          resources:
            limits: {}
            requests: {}
      volumes:
        - name: marquez-volume
          configMap:
            name: marquez-config
---
# Source: marquez/templates/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marquez-web
  labels:
    app.kubernetes.io/name: marquez
    helm.sh/chart: marquez-0.51.1
    app.kubernetes.io/instance: marquez
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: marquez
      app.kubernetes.io/instance: marquez
      app.kubernetes.io/component: web
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: marquez
        helm.sh/chart: marquez-0.51.1
        app.kubernetes.io/instance: marquez
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: marquez-web
          image: docker.io/marquezproject/marquez-web:0.51.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
          resources:
            limits: {}
            requests: {}
---
# Source: marquez/templates/tests/marquez-test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "marquez-test-connection"
  labels:
    app.kubernetes.io/name: marquez
    helm.sh/chart: marquez-0.51.1
    app.kubernetes.io/instance: marquez
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['marquez:80/api/v1/namespaces']
  restartPolicy: Never
---
# Source: marquez/templates/tests/marquez-web-test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "marquez-web-test-connection"
  labels:
    app.kubernetes.io/name: marquez
    helm.sh/chart: marquez-0.51.1
    app.kubernetes.io/instance: marquez
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['marquez-web:80']
  restartPolicy: Never
