allow-ingress-to-loki-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-loki-gateway
  namespace: jallybean-telemetry
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/instance: loki
      app.kubernetes.io/name: loki
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 80
